working but not efficient

--- a/kb_homemade.ui
+++ b/kb_homemade.ui
@@ -34,7 +34,7 @@ background-color: transparent;
      <height>341</height>
     </rect>
    </property>
-   <layout class="QGridLayout" name="gridLayout_2">
+   <layout class="QGridLayout" name="keyboard_grid">
     <item row="0" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
