--- a/mangareader.ui
+++ b/mangareader.ui
@@ -27,7 +27,7 @@
     <string notr="true"/>
    </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>0</number>
    </property>
    <widget class="QWidget" name="centralwidget">
     <property name="styleSheet">
@@ -163,7 +163,7 @@ QPushButton{
       </property>
       <layout class="QGridLayout" name="gridLayout">
        <item row="0" column="3">
-        <widget class="QPushButton" name="pushButton_4">
+        <widget class="QPushButton" name="brightnessbt">
          <property name="minimumSize">
           <size>
            <width>0</width>
@@ -274,11 +274,102 @@ QPushButton{
         </widget>
        </item>
       </layout>
-      <zorder>pushButton_4</zorder>
+      <zorder>brightnessbt</zorder>
       <zorder>nextchapterbt</zorder>
       <zorder>chapterlist</zorder>
       <zorder>pushButton_5</zorder>
       <zorder>prevchapterbt</zorder>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="brightness_window" native="true">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>320</y>
+       <width>1051</width>
+       <height>311</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QWidget{
+   background-color : white
+}</string>
+     </property>
+     <widget class="QSlider" name="brightnessslider">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>80</y>
+        <width>981</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="tickPosition">
+       <enum>QSlider::TicksAbove</enum>
+      </property>
+      <property name="tickInterval">
+       <number>12</number>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>430</x>
+        <y>10</y>
+        <width>261</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Brightness</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="exitbrightness">
+      <property name="geometry">
+       <rect>
+        <x>430</x>
+        <y>240</y>
+        <width>131</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>OK</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="minusbrightness">
+      <property name="geometry">
+       <rect>
+        <x>200</x>
+        <y>140</y>
+        <width>301</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>-</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="plusbrightness">
+      <property name="geometry">
+       <rect>
+        <x>510</x>
+        <y>140</y>
+        <width>301</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>+</string>
+      </property>
      </widget>
     </widget>
     <zorder>bg1</zorder>
@@ -286,6 +377,7 @@ QPushButton{
     <zorder>dockbar</zorder>
     <zorder>next</zorder>
     <zorder>prev</zorder>
+    <zorder>brightness_window</zorder>
    </widget>
    <widget class="QWidget" name="centralwidget2">
     <property name="enabled">
